# omron-fins-rs

./: .gitignore  .npmignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  LINUX_GUIDE.md  README.md  index.d.ts  index.js  index.win32-x64-msvc.node  package.json
benches/: plc_benches.rs
examples/: simple_read.rs  simple_setup.rs  simple_struct_ops.rs  simple_write.rs  test_cio.rs  test_write.rs  test_write2.rs
scripts/: test-binary.js
src/: client.rs  command.rs  error.rs  header.rs  js_bindings.rs  lib.rs  memory.rs  response.rs  transport.rs  types.rs  utils.rs
