[package]
name = "omron-fins"
version = "0.3.2"
edition = "2021"
rust-version = "1.70"
description = "Omron FINS protocol implementation for communicating with Omron PLCs"
license = "MIT"
repository = "https://github.com/deviagomendes/omron-fins-rs"
documentation = "https://docs.rs/omron-fins"
readme = "README.md"
keywords = ["omron", "fins", "plc", "industrial", "automation"]
categories = ["network-programming", "hardware-support"]
authors = ["Iago Aquino Mendes"]

[dependencies]
thiserror = "2"

[dev-dependencies]
hex = "0.4"

[lib]
name = "omron_fins"
path = "src/lib.rs"
