[package]
name = "omron-fins"
version = "0.5.0"
edition = "2021"
rust-version = "1.77"
description = "Omron FINS protocol implementation for communicating with Omron PLCs"
license = "MIT"
repository = "https://github.com/deviagomendes/omron-fins-rs"
documentation = "https://docs.rs/omron-fins"
readme = "README.md"
keywords = ["omron", "fins", "plc", "industrial", "automation"]
categories = ["network-programming", "hardware-support"]
authors = ["Iago Aquino Mendes"]

[dev-dependencies]
hex = "0.4"
criterion = "0.5"

[build-dependencies]
napi-build = { version = "2.1.3", optional = true }

[features]
default = []
napi = ["dep:napi", "dep:napi-derive", "dep:tokio", "dep:napi-build", "dep:serde", "dep:serde_json"]

[dependencies]
thiserror = "2"
napi = { version = "2.16.17", features = ["async", "tokio_rt"], optional = true }
napi-derive = { version = "2.16.13", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[lib]
name = "omron_fins"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "plc_benches"
harness = false

